tests/test2/pass/test-dataTypes.m2
int main(){
	int a;
	float b;
	String c;
	bool d;

	a = 1;
	b = 2.0;
	c = "ah";
	d = true;

	printInt(a);
	printFloat(b);
	printStr(c);
	printBool(d);

	return 0;
}