tests/test2/fail/fail-equality.m2
int main(){
	matrix int [1][1] a;
	matrix int [1][1] b;
	a = [[1]];
	b = [[2]];
	a == b;
	return 0;
}